--- a/preset/YiRixc/config.ini
+++ b/preset/YiRixc/config.ini
@@ -1,12 +1,12 @@
-1. a.YiRixc.10.4清新SE.ini
-2. a.YiRixc.10.4清新Pro.ini
-3. a.YiRixc.10.4清新Max.ini
-4. a.YiRixc.10.1(废稿)东方红
-5. a.YiRixc.9.16现实反射 - 副本.ini
-6. a.YiRixc9.16测试废稿.ini
-7. aYiRixc9.30电影感朦胧感.ini
-8. a.YiRixc9.30黑白漫画.ini
-9. a.YiRixc.9.16现实反射.ini
-10. a.YiRixc.8.9泛光Reshader-GI.ini
-11. a.YiRixc.8.30镜面Rico ReShade Ultra.ini
-12. a.YiRixc.10.4清新Lite.ini
+a.YiRixc.10.4清新SE.ini
+a.YiRixc.10.4清新Pro.ini
+a.YiRixc.10.4清新Max.ini
+a.YiRixc.10.1(废稿)东方红
+a.YiRixc.9.16现实反射 - 副本.ini
+a.YiRixc9.16测试废稿.ini
+aYiRixc9.30电影感朦胧感.ini
+a.YiRixc9.30黑白漫画.ini
+a.YiRixc.9.16现实反射.ini
+a.YiRixc.8.9泛光Reshader-GI.ini
+a.YiRixc.8.30镜面Rico ReShade Ultra.ini
+a.YiRixc.10.4清新Lite.ini
