--- a/preset/YiRixc/config.ini
+++ b/preset/YiRixc/config.ini
@@ -1,7 +1,8 @@
+[Presets]
 a.YiRixc.10.4清新SE.ini
 a.YiRixc.10.4清新Pro.ini
 a.YiRixc.10.4清新Max.ini
-a.YiRixc.10.1(废稿)东方红
+a.YiRixc.10.1(废稿)东方红.ini
 a.YiRixc.9.16现实反射 - 副本.ini
 a.YiRixc9.16测试废稿.ini
 aYiRixc9.30电影感朦胧感.ini
