--- a/preset/YiRixc/config.ini
+++ b/preset/YiRixc/config.ini
@@ -1,13 +1,13 @@
 [Presets]
-a.YiRixc.10.4清新SE.ini
-a.YiRixc.10.4清新Pro.ini
-a.YiRixc.10.4清新Max.ini
-a.YiRixc.10.1(废稿)东方红.ini
-a.YiRixc.9.16现实反射 - 副本.ini
-a.YiRixc9.16测试废稿.ini
-aYiRixc9.30电影感朦胧感.ini
-a.YiRixc9.30黑白漫画.ini
-a.YiRixc.9.16现实反射.ini
-a.YiRixc.8.9泛光Reshader-GI.ini
-a.YiRixc.8.30镜面Rico ReShade Ultra.ini
-a.YiRixc.10.4清新Lite.ini
+Preset1=a.YiRixc.10.4清新SE.ini
+Preset2=a.YiRixc.10.4清新Pro.ini
+Preset3=a.YiRixc.10.4清新Max.ini
+Preset4=a.YiRixc.10.1(废稿)东方红.ini
+Preset5=a.YiRixc.9.16现实反射 - 副本.ini
+Preset6=a.YiRixc9.16测试废稿.ini
+Preset7=aYiRixc9.30电影感朦胧感.ini
+Preset8=a.YiRixc9.30黑白漫画.ini
+Preset9=a.YiRixc.9.16现实反射.ini
+Preset10=a.YiRixc.8.9泛光Reshader-GI.ini
+Preset11=a.YiRixc.8.30镜面Rico ReShade Ultra.ini
+Preset12=a.YiRixc.10.4清新Lite.ini
