--- a/verify/config.json
+++ b/verify/config.json
@@ -3,8 +3,8 @@
     "start_notice_url": "http://json.scmgzs.top/verify/gonggao.txt",
     "start_notice_brief": "创梦星际官网：www.scmgzs.top",
     "update_ver": "1.1.5",
-    "update_notice": "\n#R遇到任何问题请到创梦星际反馈！官方群：205881739",
-    "update_url": "",
+    "update_notice": "\n#R有新的更新~官方群：205881739",
+    "update_url": "https://shared.cdn.queniuqe.com/store_item_assets/steam/apps/1672970/extras/MCD_Steam_GIF_PowerUp.gif?t=1717003107",
     "forced_notice": "",
     "forced_url": "",
     "sendchat_notice_url": ""
