--- a/verify/config.json
+++ b/verify/config.json
@@ -2,9 +2,9 @@
     "awa": "shisanwenAPI",
     "start_notice_url": "http://json.scmgzs.top/verify/gonggao.txt",
     "start_notice_brief": "创梦星际官网：www.scmgzs.top",
-    "update_ver": "1.1.5",
+    "update_ver": "0.35.9",
     "update_notice": "\n#R有新的更新~官方群：205881739",
-    "update_url": "https://shared.cdn.queniuqe.com/store_item_assets/steam/apps/1672970/extras/MCD_Steam_GIF_PowerUp.gif?t=1717003107",
+    "update_url": "预留链接",
     "forced_notice": "",
     "forced_url": "",
     "sendchat_notice_url": ""
