--- a/verify/config.json
+++ b/verify/config.json
@@ -3,7 +3,7 @@
     "start_notice_url": "http://json.scmgzs.top/verify/gonggao.txt",
     "start_notice_brief": "创梦星际官网：www.scmgzs.top",
     "update_ver": "0.35.9",
-    "update_notice": "\n#R有新的更新~官方群：205881739",
+    "update_notice": "\n#R有新的更新~\n提取密码：www.scmgzs.top\n官网：www.scmgzs.top官方群：205881739",
     "update_url": "预留链接",
     "forced_notice": "",
     "forced_url": "",
