--- a/verify/config.json
+++ b/verify/config.json
@@ -1,7 +1,7 @@
 {
     "awa": "shisanwenAPI",
-    "start_notice_url": "http://json.scmgzs.top/verify/gonggao.txt",
-    "start_notice_brief": "创梦星际官网：www.scmgzs.top",
+    "start_notice_url": "https://json.scmgzs.top/verify/gonggao.txt",
+    "start_notice_brief": "官方群：1012670256 创梦星际官网：www.scmgzs.top 作者QQ：2196634956",
     "update_ver": "0.35.9",
     "update_notice": "\n#R有新的更新~\n提取密码：www.scmgzs.top\n官网：www.scmgzs.top官方群：205881739",
     "update_url": "预留链接",
