--- a/api/mail/history.ini
+++ b/api/mail/history.ini
@@ -1,10 +1,8 @@
-{
- {
-  name:邮箱名称1
-  url:https://json.scmgzs.top/api/mail/mail.json
- }
- {
-  name:邮箱名称2
-  url:https://json.scmgzs.top/api/mail/mail.json
- }
-}
+[
+    {
+        "url": "https://json.scmgzs.top/api/mail/mail0.json"
+    },
+    {
+        "url": "https://json.scmgzs.top/api/mail/mail1.json"
+    }
+]
