--- a/api/mail/history.ini
+++ b/api/mail/history.ini
@@ -1,8 +1,8 @@
 [
     {
-        "url": "https://json.scmgzs.top/api/mail/mail0.json"
+        "url": "https://json.scmgzs.top/api/mail/mail.json"
     },
     {
-        "url": "https://json.scmgzs.top/api/mail/mail1.json"
+        "url": "https://json.scmgzs.top/api/mail/mail.json"
     }
 ]
