--- a/verify/config.json
+++ b/verify/config.json
@@ -3,7 +3,7 @@
     "start_notice_url": "https://json.scmgzs.top/verify/gonggao.txt",
     "start_notice_brief": "官方群：1012670256 创梦星际官网：www.scmgzs.top 作者QQ：2196634956",
     "update_ver": "0.36.0",
-    "update_notice": "\n#R有新的更新~\n更新内容：\n破解坐骑\n\n\n#R请加入QQ群下载\n官网：www.scmgzs.top官方群：205881739",
+    "update_notice": "#R有新的更新~\n更新内容：破解坐骑，请加入QQ群下载\n官网：www.scmgzs.top官方群：205881739",
     "update_url": "https://qm.qq.com/q/qyi3auEfSg",
     "forced_notice": "",
     "forced_url": "",
