--- a/verify/config.json
+++ b/verify/config.json
@@ -3,7 +3,7 @@
     "start_notice_url": "https://json.scmgzs.top/verify/gonggao.txt",
     "start_notice_brief": "官方群：1012670256 创梦星际官网：www.scmgzs.top 作者QQ：2196634956",
     "update_ver": "0.37.2",
-    "update_notice": "#R有新的更新~\n更新内容：账号安全保护，请加入QQ群下载\n官网：www.scmgzs.top官方群：205881739",
+    "update_notice": "很感谢大家在短短几个月的支持，受官方打击，破解版暂停更新，虽然三问有能力保护大家账号安全，再见！\n官网：www.scmgzs.top官方群：205881739",
     "update_url": "https://qm.qq.com/q/9vOH6Ux0ic",
     "forced_notice": "",
     "forced_url": "",
